Fix split allocation (#879)
* Add state back to selector function getBankTransactionLineByIndex

* Get update state after receiving response on load split allocation

* Fix character tail get cutoff (e.g. p, g, q)

--- a/src/banking/components/BankingView.css
+++ b/src/banking/components/BankingView.css
@@ -39,6 +39,10 @@
   text-overflow: ellipsis;
 }
 
+:local .allocateButton :global(.btn-link__content) {
+  line-height: initial;
+}
+
 :local .reportableTooltip {
   display: flex;
   padding-right: 0.5rem;
